syntax = "proto3";

package helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc Sleep (SleepRequest) returns (SleepReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message SleepRequest {
  int32 time_in_sec = 1;
}

message SleepReply {
}
